<resources>
    <string name="app_name">WeatherApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="temperature_label">Temperature</string>
    <string name="feels_like_label">feels like</string>
    <string name="city_coordinates">lt/ln: %s, %s"</string>
    <string name="error">Error</string>
    <string name="reload">Reload</string>
    <string name="time_format">"E, dd MMMM H:m"</string>
    <string name="feelsLike">feels like </string>
    <string name="Sunrise">Sunrise</string>
    <string name="Sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="Pressure">Pressure</string>
    <string name="Humidity">Humidity</string>
    <string name="Season">Season</string>
    <string name="menu_title_history">History</string>
</resources>