<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/linearDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/cityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:lines="1"
                    android:scrollHorizontally="true"
                    android:textSize="48sp" />

                <TextView
                    android:id="@+id/dataText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_base"
                    android:layout_marginTop="@dimen/margin_base"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/weatherIcon"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_gravity="bottom" />

                        <TextView
                            android:id="@+id/weatherText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="52sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <TextView
                            android:id="@+id/conditionText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:gravity="end"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/feelsLikeText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:gravity="end"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/listHour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_base" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewWeek"
            style="@style/card_style_base">

            <LinearLayout
                android:id="@+id/linerWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/listWeek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_base"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_description"
            style="@style/card_style_base">

            <LinearLayout
                android:id="@+id/liner_description"
                style="@style/liner_layout_default"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <LinearLayout
                    style="@style/liner_layout_default"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/add_card_view_icon_size"
                        android:src="@drawable/sunrise" />

                    <TextView
                        style="@style/add_card_view_text"
                        android:text="@string/Sunrise" />

                    <TextView
                        android:id="@+id/sunrise"
                        style="@style/add_card_view_info" />
                </LinearLayout>

                <View style="@style/separator_view" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/add_card_view_icon_size"

                        android:src="@drawable/sunset2" />

                    <TextView
                        style="@style/add_card_view_text"
                        android:text="@string/Sunset" />

                    <TextView
                        android:id="@+id/sunset"
                        style="@style/add_card_view_info" />
                </LinearLayout>

                <View style="@style/separator_view" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/add_card_view_icon_size"

                        android:padding="5dp"
                        android:src="@drawable/wind" />

                    <TextView
                        style="@style/add_card_view_text"
                        android:text="@string/wind" />

                    <TextView
                        android:id="@+id/wind_Speed2"
                        style="@style/add_card_view_info" />
                </LinearLayout>

                <View style="@style/separator_view" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/add_card_view_icon_size"
                        android:src="@drawable/humdity_custom" />

                    <TextView
                        style="@style/add_card_view_text"
                        android:text="@string/Pressure" />

                    <TextView
                        android:id="@+id/Pressure_mm"
                        style="@style/add_card_view_info" />
                </LinearLayout>

                <View style="@style/separator_view" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/add_card_view_icon_size"
                        android:src="@drawable/pressure" />

                    <TextView
                        style="@style/add_card_view_text"
                        android:text="@string/Humidity" />

                    <TextView
                        android:id="@+id/Humidity"
                        style="@style/add_card_view_info" />
                </LinearLayout>

                <View style="@style/separator_view" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/add_card_view_icon_size"
                        android:padding="5dp"
                        android:src="@drawable/season" />

                    <TextView
                        style="@style/add_card_view_text"
                        android:text="@string/Season" />

                    <TextView
                        android:id="@+id/Season"
                        style="@style/add_card_view_info" />
                </LinearLayout>

                <View style="@style/separator_view" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>